fix for too much in the top menu
small fix before I work on the links

--- a/static/less/picdoctors.less
+++ b/static/less/picdoctors.less
@@ -1022,6 +1022,9 @@
  * faq/doc_faq
  ***************************************************************/
  .faq {
+  a{
+   cursor:pointer;
+  }
   .row {
     margin-bottom:10px;
   }
